# agentic-paperwork

./: .env.example  Cargo.toml  README.md
scripts/: keep_alive.py  seed_products_api.py
src/: auth.rs  config.rs  error.rs  main.rs  state.rs
src/handlers/: agents.rs  catalog.rs  mod.rs  orders.rs  providers.rs
src/models/: catalog.rs  mod.rs  orders.rs  provider.rs
src/services/: audit.rs  inventory.rs  loyalty.rs  mail.rs  mod.rs  openrouter.rs
